deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idpico
spec:
  selector:
    app: idpico
  ports:
    - name: http
      port: 80
      targetPort: http
